tests/snapshots/cases/run@keyword_prefixed_idents.rv.snap
---
source: tests/snapshots.rs
input_file: tests/cases/keyword_prefixed_idents.rv
---
exit: Some(0)
--- stdout
45
