tests/snapshots/cases/run@logical_precedence.rv.snap
---
source: tests/snapshots.rs
input_file: tests/cases/logical_precedence.rv
---
exit: Some(0)
--- stdout
1
2
3
4
5
6
