tests/snapshots/cases/run@main_exit_code.rv.snap
---
source: tests/snapshots.rs
input_file: tests/cases/main_exit_code.rv
---
exit: Some(3)
--- stdout
