tests/snapshots/cases/run@module_definition.rv.snap
---
source: tests/snapshots.rs
input_file: tests/cases/module_definition.rv
---
exit: Some(0)
--- stdout
8
