tests/snapshots/cases/run@module_include.rv.snap
---
source: tests/snapshots.rs
input_file: tests/cases/module_include.rv
---
exit: Some(0)
--- stdout
3
