tests/snapshots/cases/run@require_fails.rv.snap
---
source: tests/snapshots.rs
input_file: tests/cases/require_fails.rv
---
exit: Some(1)
--- stdout
1
--- stderr
fatal: require constraint failed on function positive: tag=is_positive line=5
