tests/snapshots/cases/run@shadowing.rv.snap
---
source: tests/snapshots.rs
input_file: tests/cases/shadowing.rv
---
exit: Some(0)
--- stdout
1
2
3
4
2
1
